--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
       title="YouTube video player" frameborder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
       referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-  </body>
-
+     body{
+      margin:0;
+      font-family:Arial,sans-serif;
+      background-color:#000033;
+      color:white;
+     }
+     header{
+      background-color:navy;
+      padding:20px;
+      text-aling:center;
+      font-size:2em;
+      font-weight:bold;
   </html>
